src/objects/Airport__c.object
<CustomObject>
    <fields>
        <fullName>Airport_Name__c</fullName>
        <label>Airport Name</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airport_Notes__c</fullName>
        <label>AIRPORT NOTES</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Airport_Operating_Hours__c</fullName>
        <description>Hours of operations</description>
        <inlineHelpText>Hours of operations.</inlineHelpText>
        <label>Airport Operating Hours</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City_Code__c</fullName>
        <inlineHelpText>3-letter city code</inlineHelpText>
        <label>City Code</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closest_Alternate_Airport_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closest Alternate Airport 1</label>
        <referenceTo>Airport__c</referenceTo>
        <relationshipName>Closest_Alternate_Airport_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closest_Alternate_Airport_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closest Alternate Airport 2</label>
        <referenceTo>Airport__c</referenceTo>
        <relationshipName>Closest_Alternate_Airport_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closest_Alternate_Airport_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closest Alternate Airport 3</label>
        <referenceTo>Airport__c</referenceTo>
        <relationshipName>Closest_Alternate_Airport_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customs_After_Hours_Available__c</fullName>
        <label>Customs After Hours Available</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customs_Available__c</fullName>
        <label>Customs Available</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customs_Hours__c</fullName>
        <label>Customs Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drive_time_to_Alternate_Airport_1_mins__c</fullName>
        <label>Drive time to Alternate Airport 1 (mins)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drive_time_to_Alternate_Airport_2_mins__c</fullName>
        <label>Drive time to Alternate Airport 2 (mins)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drive_time_to_Alternate_Airport_3_mins__c</fullName>
        <label>Drive time to Alternate Airport 3 (mins)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IATA_Code__c</fullName>
        <label>IATA Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetJets_HE_Airport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NetJets HE Airport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weather_Sensitivity_Score__c</fullName>
        <inlineHelpText>1= Not typically weather sensitive
2= Sometimes weather sensitive
3= Often weather sensitive</inlineHelpText>
        <label>Weather Sensitivity Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZIP_Code__c</fullName>
        <label>ZIP Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Airport</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IATA_Code__c</columns>
        <columns>Airport_Name__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Customs_Available__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>US_Airports</fullName>
        <columns>NAME</columns>
        <columns>IATA_Code__c</columns>
        <columns>Airport_Name__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Customs_Available__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>K</value>
        </filters>
        <label>U.S. Airports</label>
    </listViews>
    <nameField>
        <label>Airport Code (ICAO Code)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Airports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Proper_Case</fullName>
        <active>true</active>
        <description>Airport name should be proper case</description>
        <errorConditionFormula>NOT( 
OR( 
BEGINS( Airport_Name__c ,&quot;A&quot;), 
BEGINS( Airport_Name__c ,&quot;B&quot;), 
BEGINS( Airport_Name__c ,&quot;C&quot;), 
BEGINS( Airport_Name__c ,&quot;D&quot;), 
BEGINS( Airport_Name__c ,&quot;E&quot;), 
BEGINS( Airport_Name__c ,&quot;F&quot;), 
BEGINS( Airport_Name__c ,&quot;G&quot;), 
BEGINS( Airport_Name__c ,&quot;H&quot;), 
BEGINS( Airport_Name__c ,&quot;I&quot;), 
BEGINS( Airport_Name__c ,&quot;J&quot;), 
BEGINS( Airport_Name__c ,&quot;K&quot;), 
BEGINS( Airport_Name__c ,&quot;L&quot;), 
BEGINS( Airport_Name__c ,&quot;M&quot;), 
BEGINS( Airport_Name__c ,&quot;N&quot;), 
BEGINS( Airport_Name__c ,&quot;O&quot;), 
BEGINS( Airport_Name__c ,&quot;P&quot;), 
BEGINS( Airport_Name__c ,&quot;Q&quot;), 
BEGINS( Airport_Name__c ,&quot;R&quot;), 
BEGINS( Airport_Name__c ,&quot;S&quot;), 
BEGINS( Airport_Name__c ,&quot;T&quot;), 
BEGINS( Airport_Name__c ,&quot;U&quot;), 
BEGINS( Airport_Name__c ,&quot;V&quot;), 
BEGINS( Airport_Name__c ,&quot;W&quot;), 
BEGINS( Airport_Name__c ,&quot;X&quot;), 
BEGINS( Airport_Name__c ,&quot;Y&quot;), 
BEGINS( Airport_Name__c ,&quot;Z&quot;) 
))</errorConditionFormula>
        <errorMessage>Please capitalize first words of the Airport Name</errorMessage>
    </validationRules>
</CustomObject>